<resources>
    <string name="app_name">Second Task</string>
    <string name="proc">%</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="x">X</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="zap">,</string>
    <string name="delit"><![CDATA[<]]></string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="del">/</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="exit">EXIT</string>
    <string name="usaly">Уже есть знак /!</string>
</resources>
